--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="rj7Ckojx2P-qiN85RUbgHLQFd_tlJlVE4goccWsgKvg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Boost your Twitch channel with our MCP strategy. Get real gaming traffic from 34 Twitch-related sites and grow organically.">
   <meta name="keywords" content="twitch promotion, twitch growth, twitch channel traffic, streamers, mcp, organic followers, twitch boost">
